fix: renamed tests